--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ http = "0.2"
 http-body = "0.4"
 httpdate = "1.0"
 httparse = "1.6"
-h2 = { git = "https://github.com/gngpp/h2.git", branch = "imp", optional = true }
+h2 = { git = "https://github.com/gngpp/h2.git", branch = "main", optional = true }
 itoa = "1"
 tracing = { version = "0.1", default-features = false, features = ["std"] }
 pin-project-lite = "0.2.4"
