--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hyper"
+name = "hyper_imp"
 version = "0.14.27"
 description = "A fast and correct HTTP library."
 readme = "README.md"
@@ -27,7 +27,7 @@ futures-util = { version = "0.3", default-features = false }
 http = "0.2"
 http-body = "0.4"
 httpdate = "1.0"
-h2 = { git = "https://github.com/gngpp/h2.git", branch = "main", optional = true }
+h2 = { package = "h2_imp", version = "0.3.21", optional = true }
 httparse = "1.8"
 itoa = "1"
 tracing = { version = "0.1", default-features = false, features = ["std"] }
