--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hyper_imp"
+name = "hyper-patch"
 version = "0.14.42"
 description = "A fast and correct HTTP library."
 readme = "README.md"
