Project rename to `hyper-patch`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ name = "hyper-patch"
 version = "0.14.42"
 description = "A fast and correct HTTP library."
 readme = "README.md"
-homepage = "https://hyper.rs"
-documentation = "https://docs.rs/hyper"
-repository = "https://github.com/hyperium/hyper"
+homepage = "https://github.com/crates-patch"
+documentation = "https://docs.rs/hyper-patch"
+repository = "https://github.com/crates-patch/hyper-patch"
 license = "MIT"
-authors = ["Sean McArthur <sean@seanmonstar.com>"]
+authors = ["0x676e67 <gngppz@gmail.com>"]
 keywords = ["http", "hyper", "hyperium"]
 categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
 edition = "2018"
