--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ futures-util = { version = "0.3", default-features = false }
 http = "0.2.11"
 http-body = "0.4.6"
 httpdate = "1.0.3"
-h2 = { package = "h2_imp", version = "0.5", optional = true }
+h2 = { package = "h2-patch", version = "0.5", optional = true }
 httparse = "1.8"
 itoa = "1"
 tracing = { version = "0.1", default-features = false, features = ["std"] }
