--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ http = "0.2"
 http-body = "0.4"
 httpdate = "1.0"
 httparse = "1.9"
-h2 = { package = "rh2", version = "0.3", optional = true }
+h2 = { package = "rh2", version = "0.3.27", optional = true }
 itoa = "1"
 tracing = { version = "0.1", default-features = false, features = ["std"] }
 pin-project-lite = "0.2.4"
@@ -84,7 +84,7 @@ full = [
 
 # HTTP versions
 http1 = []
-http2 = ["h2"]
+http2 = ["h2", "h2/unstable"]
 
 # Client/Server
 client = []
