--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ pnet_datalink = "0.27.2"
 
 [features]
 # Nothing by default
-default = ["full"]
+default = []
 
 # Easily turn it all on
 full = [
