--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "rhyper"
 version = "0.14.51"
 description = "A fast and correct HTTP library."
 readme = "README.md"
-homepage = "https://github.com/crates-patch"
+homepage = "https://github.com/penumbra-x/hyper"
 documentation = "https://docs.rs/rhyper"
-repository = "https://github.com/crates-patch/rhyper"
+repository = "https://github.com/penumbra-x/hyper"
 license = "MIT"
 authors = ["0x676e67 <gngppz@gmail.com>"]
 keywords = ["http", "hyper", "hyperium"]
