--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ pin-project-lite = "0.2"
 tower-service = "0.3"
 tokio = { version = "1", features = ["sync"] }
 want = "0.3"
+lru = { version = "0.12.5", optional = true }
 
 # Optional
 
@@ -87,7 +88,7 @@ http1 = []
 http2 = ["h2", "h2/unstable"]
 
 # Client/Server
-client = []
+client = ["dep:lru"]
 server = []
 
 # `impl Stream` for things
