--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ pin-project-lite = "0.2"
 tower-service = "0.3"
 tokio = { version = "1", features = ["sync"] }
 want = "0.3"
-lru = { version = "0.12", optional = true }
+lru = { version = "0.12", default-features = false, optional = true }
 
 # Optional
 
