--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ tokio = { version = "1", features = ["sync"] }
 
 futures-channel = { version = "0.3", optional = true }
 futures-util = { version = "0.3", default-features = false, optional = true }
-h2 = { version = "0.4.2", optional = true }
+h2 = { version = "0.4.0", package = "rh2",optional = true }
 http-body-util = { version = "0.1", optional = true }
 httparse = { version = "1.8", optional = true }
 httpdate = { version = "1.0", optional = true }
@@ -66,7 +66,7 @@ tokio-util = "0.7.10"
 
 [features]
 # Nothing by default
-default = []
+default = ["full"]
 
 # Easily turn it all on
 full = [
@@ -78,7 +78,7 @@ full = [
 
 # HTTP versions
 http1 = ["dep:futures-channel", "dep:futures-util", "dep:httparse", "dep:itoa"]
-http2 = ["dep:futures-channel", "dep:futures-util", "dep:h2"]
+http2 = ["dep:futures-channel", "dep:futures-util", "h2/unstable"]
 
 # Client/Server
 client = ["dep:want", "dep:pin-project-lite", "dep:smallvec"]
