feat: Expose `initial_stream_id` as public API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ pnet_datalink = "0.27.2"
 
 [features]
 # Nothing by default
-default = ["full"]
+default = []
 
 # Easily turn it all on
 full = [
