--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,7 @@ tokio-util = "0.7.10"
 
 [features]
 # Nothing by default
-default = ["full"]
+default = []
 
 # Easily turn it all on
 full = [
@@ -239,6 +239,3 @@ required-features = ["full"]
 name = "server"
 path = "tests/server.rs"
 required-features = ["full"]
-
-[patch.crates-io]
-rh2 = { git = "https://github.com/penumbra-x/h2.git", branch = "priority" }
