--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ tokio = { version = "1", features = ["sync"] }
 
 futures-channel = { version = "0.3", optional = true }
 futures-util = { version = "0.3", default-features = false, optional = true }
-h2 = { version = "0.4.0", package = "rh2",optional = true }
+h2 = { version = "0.4.10", package = "http2", optional = true }
 http-body-util = { version = "0.1", optional = true }
 httparse = { version = "1.9", optional = true }
 httpdate = { version = "1.0", optional = true }
@@ -89,6 +89,9 @@ capi = []
 
 # Utilize tracing (currently unstable)
 tracing = ["dep:tracing"]
+
+# Http2 tracing
+http2-tracing = ["h2/tracing"]
 
 # internal features used in CI
 nightly = []
